--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="Living in the Coachella Valley comes with unique climate challenges that demand reliable indoor comfort solutions. Anthem Air Conditioning & Plumbing has risen to this need, becoming a trusted resource for homeowners and businesses seeking dependable heating, cooling, and plumbing services." />
     <meta name="keywords" content="A/C repair near me, AC company, AC company near me" />
-    <meta property="og:title" content="A/C repair near me in Coachella, CA" />
-    <title>A/C repair near me in Coachella, CA</title>
+    <meta property="og:title" content="AC company in Coachella, CA" />
+    <title>AC company in Coachella, CA</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -62,7 +62,7 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <h1>A/C repair near me in Coachella, CA</h1>
+        <h1>AC company in Coachella, CA</h1>
         <button onclick="window.location.href='tel:+17608952621'">Click Here to Call Us: 17608952621</button>
     </div>
 
